下書きを修正

--- a/articles/e346918bfe62ca.md
+++ b/articles/e346918bfe62ca.md
@@ -2,7 +2,7 @@
 title: "AthenaでALBのアクセスログを分析する -リクエスト/レスポンスサイズの平均と簡単な分布集計"
 emoji: "👨🏻‍💻"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["AWS", "Athena", "ALB"]
+topics: ["AWS", "Athena"]
 published: false
 ---
 AthenaでALBのアクセスログを分析するクエリの紹介です。
@@ -10,8 +10,8 @@ AthenaでALBのアクセスログを分析するクエリの紹介です。
 # 背景
 あるAPIに対するリクエストのサイズとレスポンスのサイズがどんなものなのか調べる必要がありました。あるAPIはALBの背後にいるので、ALBのアクセスログを分析することで分かります。やりたいことは、リクエスト/レスポンスの平均サイズを求めること、そしてサイズ帯の分析（簡単な分布集計）です。
 
+# 平均を求めるクエリ
 ```sql
-平均を求めるクエリ
 /*
 received_bytesの平均
 */
@@ -35,10 +35,12 @@ SELECT SUM(CASE WHEN sent_bytes>0 THEN received_bytes ELSE 0 END)/COUNT(received
 
 ```
 received_bytesがリクエストサイズ、sent_bytesがレスポンスサイズです。集計対象とするフィールドはALBのドキュメントから確認可能です。
+https://docs.aws.amazon.com/ja_jp/elasticloadbalancing/latest/application/load-balancer-access-logs.html
 
 単に平均を求めるだけであればAVG関数を使えばよいですが、集計対象としているフィールドは値が0になっている場合があります。値が0の場合は除きたいので、フィールドの値が0以上のログ行をカウントした数でフィールドの値の合計を割っています。
+
+# サイズ帯の分析（簡単な分布集計）
 ```sql
-サイズ帯の分析（簡単な分布集計）
 /*
 received_bytesのざっくりした分布集計
 */
@@ -69,13 +71,15 @@ FROM example_table
 ```
 やっていることは単純です。まず集計期間におけるログの行数を数えて全体の数を求めています。次にreceived/sent_bytesを10KBで区切って、区切りの間にログが何件あるか量を求めます。このようなクエリを書くことで、平均からは読み取ることができないサイズの分布をざっくりと掴むことができます。
 
-一工夫必要なのは、条件に当てはまらないログ行を`or null`でカウント対象外にしてやることです。NULLはカウントされません。
+一工夫必要なのは、条件に当てはまらないログ行を`or null`でカウント対象外にしてやることです。このように書くことでNULLの場合はカウントされなくなります。
+
 単にcountするだけでは、条件に一致する(true)行も一致しない行(false)もカウントしてしまい、求めている結果が得られません。
 
 あとはクエリの結果をCSVでダウンロードして、Excelなどでグラフにしてあげると視覚的に分かりやすくなります。
 
-# 注意点
+# 費用に関する注意点
 費用には注意しましょう。Athenaはスキャンしたデータ量に応じた課金体系です。
+https://aws.amazon.com/jp/athena/pricing/
 
 ALBに対するリクエスト量によりますが、ALBのアクセスログは大量に出力されます。ライフサイクルポリシーで保管期間を90日など短く設定しているなら、アクセスログを出力しているS3バケットのルート以下をテーブル作成してもスキャンするデータ量はそこまで大きくならないでしょう。
 
