下書きを修正

--- a/articles/e346918bfe62ca.md
+++ b/articles/e346918bfe62ca.md
@@ -1,5 +1,5 @@
 ---
-title: "AthenaでALBのアクセスログを分析する -リクエスト/レスポンスサイズの平均と簡単な分布集計"
+title: "AthenaでALBのアクセスログを分析して、リクエスト/レスポンスの平均サイズを求め、分布集計も行う"
 emoji: "👨🏻‍💻"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["AWS", "Athena"]
@@ -8,7 +8,7 @@ published: false
 AthenaでALBのアクセスログを分析するクエリの紹介です。
 
 # 背景
-あるAPIに対するリクエストのサイズとレスポンスのサイズがどんなものなのか調べる必要がありました。あるAPIはALBの背後にいるので、ALBのアクセスログを分析することで分かります。やりたいことは、リクエスト/レスポンスの平均サイズを求めること、そしてサイズ帯の分析（簡単な分布集計）です。
+あるAPIに対するリクエストのサイズとレスポンスのサイズがどんなものなのか調べる必要がありました。あるAPIはALBの背後にいるので、ALBのアクセスログを分析することで分かります。やりたいことは、リクエスト/レスポンスの平均サイズを求めること、どのくらいのサイズのリクエスト/レスポンスが多いのか分布集計すること、この二つです。
 
 # 平均を求めるクエリ
 ```sql
