--- a/articles/34bdcae1f32a89.md
+++ b/articles/34bdcae1f32a89.md
@@ -5,7 +5,7 @@ type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["GitHubActions", "AWS", "Lambda", "CloudFront"]
 published: false
 ---
-マネジメントコンソールからは簡単に実施できるLambda＠Edgeのデプロイですが、CLIで自動化するスクリプトを書くのはやや面倒です。本記事ではGitHub ActionsからLambda@EdgeへデプロイするWorkflowを紹介します。ご参考になれば幸いです。
+マネジメントコンソールからは簡単に実施できるLambda＠Edgeのデプロイですが、CLIで自動化するのはやや面倒です。本記事ではGitHub ActionsからLambda@EdgeへデプロイするWorkflowを紹介します。ご参考になれば幸いです。
 
 # 背景
 今回紹介するWorkflowは以下の背景から作成しました。
@@ -29,14 +29,14 @@ published: false
 
 ## Workflowを二つに分ける理由
 安全性を考慮して分けることにしました。別々にしておくと次のメリットがあります。
-- Lambda@Edgeの切り戻しが容易であること
+- 別々に切り戻せること
 - Lambda関数の更新直後にコードの問題が発覚したとき、Workflowを分けておけば、問題のあるコードがそのままLambda@Edgeへデプロイされることを防げること
 
 ## Workflowを手動で実行してもらう理由
 `workflow_dispatch`限定のWorkflowにしました。大したメリットでもありませんが、ブランチをチェックアウト（スイッチ）する手間が省けます。
 
 # Workflow
-```yml:update-lambda.yml
+```yml:update-lambda-function.yml
 name: Update lambda function
 
 on:
@@ -118,7 +118,7 @@ jobs:
         run: aws lambda publish-version --function-name ${{ env.AWS_LAMBDA_FUNCTION_ARN }}
 ```
 
-```yml:deploy-lambda-edge.yml
+```yml:deploy-lambda-fuction-to-lambda@edge.yml
 name: Deploy lambda function to Lambda@Edge
 
 on:
@@ -246,7 +246,7 @@ https://dev.classmethod.jp/articles/must-set-timeout-on-actions-for-save-cost/
 
 # IAM
 GitHub Actionsが引き受けるIAM Roleに割り当てる最小権限のIAM Policyは以下になりました。
-```json:iam role policy
+```json:policy
 {
     "Version": "2012-10-17",
     "Statement": [
@@ -299,3 +299,5 @@ IAM Roleの信頼関係には以下を記載しました。
     ]
 }
 ```
+# あとがき
+今回、はじめてGitHub ActionsのWorkflowを自作しましたが、割とすんなり作成できました。update-distrbution に渡すJSONの作成でハマりました。最小権限のIAMポリシーを書くのもやっぱり少し手間でした。
