--- a/articles/34bdcae1f32a89.md
+++ b/articles/34bdcae1f32a89.md
@@ -1,9 +1,9 @@
 ---
-title: "GitHub ActionsからLambda@Edgeへデプロイする"
+title: "Lambda@EdgeへのデプロイをGitHub Actionsで自動化する"
 emoji: "🦭"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["GitHubActions", "AWS", "Lambda", "CloudFront"]
-published: false
+published: true
 ---
 マネジメントコンソールからは簡単に実施できるLambda＠Edgeのデプロイですが、CLIで自動化するのはやや面倒です。本記事ではGitHub ActionsからLambda@EdgeへデプロイするWorkflowを紹介します。ご参考になれば幸いです。
 
