--- a/articles/34bdcae1f32a89.md
+++ b/articles/34bdcae1f32a89.md
@@ -1,6 +1,6 @@
 ---
 title: "Lambda@EdgeへのデプロイをGitHub Actionsで自動化する"
-emoji: "🦭"
+emoji: "🚀"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["GitHubActions", "AWS", "Lambda", "CloudFront"]
 published: true
@@ -300,4 +300,4 @@ IAM Roleの信頼関係には以下を記載しました。
 }
 ```
 # あとがき
-今回、はじめてGitHub ActionsのWorkflowを自作しましたが、割とすんなり作成できました。update-distrbution に渡すJSONの作成でハマりました。最小権限のIAMポリシーを書くのもやっぱり少し手間でした。
+今回、はじめてGitHub ActionsのWorkflowを自作しましたが、割とすんなり作成できました。update-distrbution に渡すJSONの作成でハマりました。最小権限のIAMポリシーを書くのもやっぱり少し手間でした。🦭
