chore: add image

--- a/articles/34bdcae1f32a89.md
+++ b/articles/34bdcae1f32a89.md
@@ -19,6 +19,9 @@ published: true
 - 開発者がAWS CLIの実行環境を準備する必要がない。
 - 開発者用IAMユーザーの新規作成、既存IAMユーザーへの権限追加を行う必要がない。GitHub Actions用のIAMロールを準備すればよく、セキュリティの観点で好ましい。
 
+# イメージ
+![](/images/34bdcae1f32a89/lambda-deploy-from-gha.png)
+
 # 設計
 今回紹介するWorkflowの設計は次のとおりです。
 
