feat: modify article

--- a/articles/7e29aa191d056f.md
+++ b/articles/7e29aa191d056f.md
@@ -35,7 +35,7 @@ https://github.com/aws-samples/siem-on-amazon-opensearch-service/blob/main/READM
 このような問いかけに答える責任があるが、自信をもってYesと答えられない方にとって、セキュリティインシデント疑似体験GameDayは非常に有益です。ゲームを通して、AWS環境におけるセキュリティインシデント調査の基本的な流れを学ぶことができますし、チームで参加すれば共有の手間も省くことができます。ネタバレを避けるため、調査方法の説明はできないので、次のGameDayにチームで参加してみてください。
 
 ### SIEN on AOSの活用法
-GameDay参加以前から弊社ではSIEM on AOSを利用していますが、ゲームに参加して初めて知った機能がありました。それは、SIEM on AOSに取り込んだ各種ログを横断して検索するDiscoverという機能です。Discoverを使用すると、例えば、あるIPアドレスが出現する行を複数のソースのログを対象に検索することができます。これは非常に便利で、Amazon AthenaでCloudFrontとELBとWebサーバーのログに対して個別に発行していたクエリをいっぺんに実行できるようなものです。IPアドレスやインスタンスID等の情報を使って、異なる種類のログの間の関連性を見つけ出すことができます。
+GameDay参加以前から弊社ではSIEM on AOSを利用していますが、ゲームに参加して初めて知った機能がありました。それは、SIEM on AOSに取り込んだ各種ログを横断して検索するDiscoverという機能です。Discoverを使用すると、例えば、あるIPアドレスが出現する行を複数のソースのログを対象に検索することができます。これは非常に便利で、Amazon AthenaでセキュリティログやCloudTrailログ、アクセスログに対して個別に発行していたクエリをいっぺんに発行できるようなものです。例えば、GuardDutyのログに記録されたIPアドレスを抽出条件として、CloudTrailのログや各種アクセスログから対象のIPが含まれる行を簡単に探し出すことができます。
 
 ![](/images/7e29aa191d056f/siem_on_aos_discover_screen.png)
 
@@ -54,7 +54,7 @@ SIEN on AOSにはAWSサービスごとに事前定義されたダッシュボー
   - セキュリティリスクとなる危険な設定を検出できるか
   - 脆弱性を放置していないか
 
-インシデントに対応する前提として、AWS環境における不審なアクションを検出・通知できなければいけません。GuardDutyを有効化しているだけでは不十分で、GuardDutyのイベントに気づくための通知の仕組みが必要です。
+インシデントに対応する前提として、AWS環境における不審なアクションを検出・通知できなければいけません。GuardDutyを有効化しているだけでは不十分で、GuardDutyのイベントを見逃さないようにするための通知の仕組みが必要です。Severityが低いイベントであっても、そのイベントが発生したという事実がCriticalであるようなイベント（例えば、S3のブロックパブリックアクセスやサーバーアクセスログを無効化される）もあるので、GuardDutyのイベントが他の通知に紛れないようにしておくことが重要だと感じました。
 
 インシデント対応にはできるだけ多くの情報が必要になるので、ログ記録の設定ができているかの確認もしておきたいです。ログ記録は有効化していたが、調査に役立つ情報を出力するには追加設定が必要だったという事態にならないように、各種ログのフィールドも事前に調べておきたいです。
 
