fix: title and typo

--- a/articles/7e29aa191d056f.md
+++ b/articles/7e29aa191d056f.md
@@ -1,5 +1,5 @@
 ---
-title: "SREチームでAWSセキュリティインシデント疑似体験GameDayに参加しました"
+title: "SREチームでAWSセキュリティインシデント疑似体験GameDayに参加して、セキュリティの知識とスキルが向上しました！"
 emoji: "🕵"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["AWS"]
@@ -15,7 +15,7 @@ published: false
 ## ゲームの特徴
 参加者はチームを組んで、一連のミッションに取り組みます。各ミッションは複数のクイズで構成されており、クイズに正答することで得点を獲得し、点数が最も高いチームの勝利となります。ミッションが進むに従ってクイズの難易度が上がっていき、解き進めることでゲーム環境で発生したセキュリティインシデントの内容や影響範囲が明らかになっていきます。
 
-参加者はクイズに解答するゲームポータルとログ分析を行うSIEM on Amazon OpenSearch(以下、SIEM on AOS)の二つの画面を使います。インシデント調査はSIEN on AOSに取り込まれた各種ログだけを頼りに実施します。実際にセキュリティインシデントが発生した際は、AWSマネジメントコンソールをはじめとして、使用可能な全ての手段を用いて調査すると思うのですが、調査手段をログに限定しているところがゲーム性を高めていると言えるでしょう。
+参加者はクイズに解答するゲームポータルとログ分析を行うSIEM on Amazon OpenSearch(以下、SIEM on AOS)の二つの画面を使います。インシデント調査はSIEM on AOSに取り込まれた各種ログだけを頼りに実施します。実際にセキュリティインシデントが発生した際は、AWSマネジメントコンソールをはじめとして、使用可能な全ての手段を用いて調査すると思うのですが、調査手段をログに限定しているところがゲーム性を高めていると言えるでしょう。
 幸い、本物のセキュリティインシデントを経験したことはないのですが、インシデント調査とは、すなわちログ分析なのかもしれません。
 
 なお、SIEM on AOSとは以下で公開されているSIEMソリューションのことです。
@@ -34,14 +34,14 @@ https://github.com/aws-samples/siem-on-amazon-opensearch-service/blob/main/READM
 
 このような問いかけに答える責任があるが、自信をもってYesと答えられない方にとって、セキュリティインシデント疑似体験GameDayは非常に有益です。ゲームを通して、AWS環境におけるセキュリティインシデント調査の基本的な流れを学ぶことができますし、チームで参加すれば共有の手間も省くことができます。ネタバレを避けるため、調査方法の説明はできないので、次のGameDayにチームで参加してみてください。
 
-### SIEN on AOSの活用法
+### SIEM on AOSの活用法
 GameDay参加以前から弊社ではSIEM on AOSを利用していますが、ゲームに参加して初めて知った機能がありました。それは、SIEM on AOSに取り込んだ各種ログを横断して検索するDiscoverという機能です。Discoverを使用すると、例えば、あるIPアドレスが出現する行を複数のソースのログを対象に検索することができます。これは非常に便利で、Amazon AthenaでセキュリティログやCloudTrailログ、アクセスログに対して個別に発行していたクエリをいっぺんに発行できるようなものです。例えば、GuardDutyのログに記録されたIPアドレスを抽出条件として、CloudTrailのログや各種アクセスログから対象のIPが含まれる行を簡単に探し出すことができます。
 
 ![](/images/7e29aa191d056f/siem_on_aos_discover_screen.png)
 
 画像は[こちら](https://catalog.us-east-1.prod.workshops.aws/workshops/60a6ee4e-e32d-42f5-bd9b-4a2f7c135a72/ja-JP/03-log-analysis-basics/03-02-log-analysis/03-02-1-discover-screen)からお借りしました。
 
-SIEN on AOSにはAWSサービスごとに事前定義されたダッシュボードが存在していて、これがよくできているので満足してしまっていたのですが、インシデント調査においてはダッシュボードを使うよりDiscoverの方が適していると分かりました。
+SIEM on AOSにはAWSサービスごとに事前定義されたダッシュボードが存在していて、これがよくできているので満足してしまっていたのですが、インシデント調査においてはダッシュボードを使うよりDiscoverの方が適していると分かりました。
 
 ### 必要な準備ができているか見直すきっかけになる
 セキュリティインシデントに対して必要な準備ができているか見直すきっかけになりました。参加者によって必要な準備は異なると思うので詳細に記載しませんが、見直しの観点は共有できると思うので書いておきます。
